<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forRegistration">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:hint="Enter name"
        android:textColorHint="@color/whiteTransp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_v1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_v"
        android:padding="30dp"
        android:hint="Enter email"
        android:textColorHint="@color/whiteTransp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_v2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_v1"
        android:padding="30dp"
        android:hint="Enter phone number"
        android:textColorHint="@color/whiteTransp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_v3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_v2"
        android:padding="30dp"
        android:textColorHint="@color/whiteTransp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter date"
            android:textColor="@android:color/white">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_v3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="58dp"
        android:padding="30dp"
        android:text="Make Reservation"
       android:id="@+id/register"
        />

</RelativeLayout>